testp.txt
.\gradlew : WARNING: A 
restricted method in 
java.lang.System has been 
called
At line:1 char:1
+ .\gradlew build 2>&1 | 
Out-File -Encoding utf8 
e:\Isuth\modDev\testp. ...
+ ~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          
    : NotSpecified: (WARNI  
  NG: A rest...has been c   
 alled:String) [], Remot    
eException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
WARNING: 
java.lang.System::load has 
been called by net.rubygrape
fruit.platform.internal.Nati
veLibraryLoader in an 
unnamed module (file:/C:/Use
rs/spege/.gradle/wrapper/dis
ts/gradle-4.9-bin/e9cinqnqvp
h59rr7g70qubb4t/gradle-4.9/l
ib/native-platform-0.14.jar)
WARNING: Use --enable-native
-access=ALL-UNNAMED to 
avoid a warning for callers 
in this module
WARNING: Restricted methods 
will be blocked in a future 
release unless native 
access is enabled


> Configure project :
files(...) dependencies are not deobfuscated. Use a flatDir repository instead: https://docs.gradle.org/current/userguide/repository_types.html#sec:flat_dir_resolver
Cannot deobfuscate dependency of type DefaultSelfResolvingDependency_Decorated, using obfuscated version!
New Dep: net.minecraftforge:forge:1.12.2-14.23.5.2860_mapped_snapshot_20171003-1.12

> Task :compileJava FAILED
E:\Isuth\modDev\src\main\jav
a\com\spege\insanetweaks\int
egration\jei\InsaneTweaksJEI
Plugin.java:46: error: UID 
is not public in ImbuementAl
tarRecipeCategory; cannot 
be accessed from outside 
package
                ImbuementAlt
arRecipeCategory.UID
                            
                ^
Note: Some input files use 
or override a deprecated 
API.
Note: Recompile with 
-Xlint:deprecation for 
details.
1 error

FAILURE: Build failed with 
an exception.

* What went wrong:
Execution failed for task 
':compileJava'.
> Compilation failed; see 
the compiler error output 
for details.

* Try:
Run with --stacktrace 
option to get the stack 
trace. Run with --info or 
--debug option to get more 
log output. Run with --scan 
to get full insights.

* Get more help at 
https://help.gradle.org

Deprecated Gradle features were used in this build, making it incompatible with Gradle 5.0.
Use '--warning-mode all' to show the individual deprecation warnings.
See https://docs.gradle.org/4.9/userguide/command_line_interface.html#sec:command_line_warnings

BUILD FAILED in 3s
1 actionable task: 1 executed
